--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
-package-lock.json
 node_modules/
 .expo/
+.expo-shared/
 .vscode/
 npm-debug.*
 *.jks
@@ -10,6 +10,6 @@ npm-debug.*
 *.mobileprovision
 *.orig.*
 web-build/
-
+*.env
 # macOS
 .DS_Store
