--- a/package.json
+++ b/package.json
@@ -1,28 +1,31 @@
 {
+  "name": "examsforcareers-admin-app",
+  "description": "",
+  "version": "1.0.0",
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web",
-    "eject": "expo eject"
+    "web": "expo start --web"
   },
   "dependencies": {
-    "@react-navigation/bottom-tabs": "^6.0.5",
-    "@react-navigation/native": "^6.0.2",
-    "expo": "^42.0.0",
-    "expo-splash-screen": "~0.11.2",
-    "expo-status-bar": "~1.0.4",
-    "react": "16.13.1",
-    "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
-    "react-native-safe-area-context": "3.2.0",
-    "react-native-screens": "~3.4.0",
-    "react-native-web": "~0.13.12",
-    "expo-secure-store": "~10.2.0"
+    "@react-navigation/bottom-tabs": "^6.5.11",
+    "@react-navigation/native": "^6.1.9",
+    "expo": "^49.0.18",
+    "expo-status-bar": "~1.6.0",
+    "react": "^18.2.0",
+    "react-native": "^0.72.6",
+    "react-native-safe-area-context": "4.6.3",
+    "expo-secure-store": "~12.3.1",
+    "react-native-web": "~0.19.6",
+    "react-dom": "18.2.0",
+    "@expo/webpack-config": "^19.0.0"
   },
   "devDependencies": {
-    "@babel/core": "~7.9.0"
+    "@babel/core": "^7.23.3"
   },
-  "private": true
+  "keywords": [],
+  "author": "Chitranjan Gupta",
+  "license": "MIT"
 }
